@@ -270,7 +270,9 @@ int send_result() {
     else if(mod_gm_opt->message == NULL) {
         /* get all lines from stdin */
         mod_gm_opt->message = gm_malloc(GM_BUFFERSIZE);
+        alarm(mod_gm_opt->timeout);
         read_filepointer(&mod_gm_opt->message, stdin);
+        alarm(0);
     }
     return(submit_result());
 }
